fixed booklist alignment

--- a/src/components/BookList/BookList.styles.scss
+++ b/src/components/BookList/BookList.styles.scss
@@ -1,12 +1,14 @@
 .book-list {
     display: grid;
     grid-template-columns: repeat(5, minmax(auto, 1fr));
-    gap: 10px;      
+    gap: 10px;   
+    
 }
 
 .book {
     font-family: 'Playfair Display', serif;
     text-align: center;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
